<resources>
    <string name="app_name">Bike Wash</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="NA">NA</string>
    <string name="_am">AM</string>
    <string name="pm">PM</string>
    <string name="office_in_time">OFFICE IN TIME</string>
    <string name="office_out_time">OFFICE OUT TIME</string>
    <string name="user_designation">User designation</string>
    <string name="you_can_capture_image_by_this_button">You can capture image by this button</string>
    <string name="You_have_updated_both_time">You have updated both time</string>
    <string name="no_internet">No internet connection</string>
    <string name="daily_task">Daily Task</string>
    <string name="title_calendar">Calendar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_daily_task">Daily Task</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="image_desc">ImageDescription</string>
    <string name="proceed_with_your">Proceed with your</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="babysitter">Babysitter</string>
    <string name="parents">Parents</string>
    <string name="send_otp">Send OTP</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="take_care_your_baby">Take care your baby</string>
    <string name="don_t_receive_an_otp">Don\'t receive an OTP?</string>
    <string name="get_back_to_login">Get back to login</string>
    <string name="alternative_mobile_number">Alternative Mobile Number</string>
    <string name="last_name">Last Name(Optional)</string>
    <string name="first_name">First Name</string>
    <string name="create_your_account">Create your account</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="next">Next</string>
    <string name="babysitter_name">Babysitter Name</string>
    <string name="please_upload_document_n_eg_aadhar_card">Please upload document\n(eg. Aadhar Card)</string>
    <string name="front_image">Front image</string>
    <string name="back_image">Back image</string>
    <string name="for_security_purpose_please_n_click_this_button">For Security purpose please\n click this button</string>
    <string name="police_verification_done">Police verification done</string>
    <string name="choose_image_from">Choose image from</string>
    <string name="add_child">Add Child</string>
    <string name="take_selfie">Take Selfie</string>
    <string name="click_photo_with_child_to_check_in">Click photo with child to check in</string>
    <string name="hey_stacy">Hey, Stacy</string>
    <string name="days_left">Days left</string>
    <string name="tasks">Tasks</string>
    <string name="_0">0</string>
    <string name="checkout">Checkout</string>
    <string name="sarah_michelle">Sarah Michelle</string>
    <string name="_91_123_4567_890">+91 123–4567–890</string>
    <string name="calendar">Calendar</string>
    <string name="other_details_optional">Other Details(Optional)</string>
    <string name="habit_optional">Habit(Optional)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="add_child_info">Add Child Info</string>
    <string name="johnson_family">Johnson Family</string>
    <string name="you_have_not_assigned_any_ntask_to_babysitter">You have not assigned any\ntask to babysitter</string>
    <string name="add_task">+ Add Task</string>
    <string name="_add_task">Add Task</string>
    <string name="please_wait">Please Wait…</string>
    <string name="playing_games_and_having_fun">Playing games and having fun!</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="start_time">Start Time</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="end_time">End Time</string>
    <string name="date">00-Month-0000</string>
    <string name="save">Save</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="your_profile">Your Profile</string>
    <string name="babysitter_profile">Babysitter profile</string>
    <string name="babysitter_Profile">Babysitter Profile</string>
    <string name="child_profile">Child Profile</string>
    <string name="edit_task">Edit Task</string>
    <string name="logout">Logout</string>
    <string name="version_0_0">Version 0.0</string>
    <string name="permission_granted">Camera permission granted</string>
    <string name="permission_denied">Camera permission denied</string>
    <string name="should_have_10_digits">Should have 10 digits</string>
    <string name="daily_task_frag">DailyTaskFragment</string>
    <string name="press_once_again_to_exit">Press once again to exit</string>
    <string name="calendar_frag">CalendarFragment</string>
    <string name="add_child_frag">AddChildFragment</string>
    <string name="settings_frag">SettingsFragment</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_mobile_num">Please enter mobile number</string>
    <string name="congo_task_completed">Congratulations!\nYou have successfully\ncompleted all tasks</string>
    <string name="unable_to_select_image">Unable to select image</string>
    <string name="profile_image_is_required">Profile image is required</string>
    <string name="first_image_is_required">First document image is required</string>
    <string name="second_image_is_required">Second document image is required</string>
    <string name="police_verification_button">Please check police verification button</string>
    <string name="please_enter_email_id">Please enter email id</string>
    <string name="please_enter_designation">Please enter designation</string>
    <string name="add_description">Add description</string>
    <string name="add_more_task">Add more task</string>
    <string name="for_a_week">For a week</string>
    <string name="for_a_month">For a month</string>
    <string name="more_than_a_month">More than a month</string>
    <string name="sarah">Sarah</string>
    <string name="michelle">Michelle</string>
    <string name="gender">Gender</string>
    <string name="girl">Girl</string>
    <string name="you_have_not_added_any_child">You have not added any child</string>
    <string name="child_name">Child Name</string>
    <string name="find_a_babysitter">Find a Babysitter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_babysitter">Find Babysitter</string>
    <string name="child_info">Child Info</string>
    <string name="not_assigned_babysitter">You have not assigned any Babysitter\nPlease go to Find a Babysitter page\nand assigned her</string>
    <string name="search_babysitter_by_name_or_number">Search babysitter by name or number</string>
    <string name="child_babysitter_mapped">Child and babysitter successfully mapped</string>
    <string name="not_getting_value">Not getting value</string>
    <string name="child_added">Child Added</string>
    <string name="document_uploaded">Documents Uploaded</string>
    <string name="boy">Boy</string>
    <string name="click_on_image_to_expand_view">Click on image to expand view</string>
    <string name="document_verification_for_nsecurity_purpose">Document verification for\nsecurity purpose</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="_2">2</string>
    <string name="task_name">Task name</string>
    <string name="please_add_task_name">Please add task name</string>
    <string name="task_should_have_30_letters">task name should have 30 letters</string>
    <string name="please_add_start_time">Please add start time</string>
    <string name="please_add_end_time">please add end time</string>
    <string name="description_should_have_60_words">Description should have 60 letters</string>
    <string name="please_select_date">Please select date</string>
    <string name="not_getting_child_id">Not getting child id</string>
    <string name="no_task_assigned_to_you">No task assigned to you</string>
    <string name="you_need_to_add_child_first">You need to add child first</string>
    <string name="no_schedule_data_found">No schedule data found</string>
    <string name="scheduled">Scheduled</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="status">Status</string>
    <string name="schedule_task">Schedule Task</string>
    <string name="apiError">API Error</string>
    <string name="designation">Designation</string>
    <string name="user_email">User email</string>
    <string name="update_profile">Update Profile</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign In With Google</string>
</resources>