<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarThumbVertical="@android:color/transparent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="start"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/ic_girl"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/proceed_with_you_login"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:hint="@string/email"
            android:theme="@style/accentColorStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:theme="@style/accentColorStyle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/_12sdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_sky_blue"
            android:textSize="@dimen/_12sdp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/logLoginBtn"
            style="@style/buttonStyle"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:text="@string/or"/>

        <LinearLayout
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:background="@drawable/round_white_only"
            android:elevation="@dimen/_1sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/ic_google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/loginNewSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="Don't have account? SignUp"
                android:textColor="@color/dark_sky_blue"
                android:textSize="@dimen/_12sdp"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>