<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Activity.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_20sdp">

        <ImageView
            android:id="@+id/registerLogo"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_28sdp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/ic_scooty_girl"/>

        <TextView
            android:id="@+id/it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="@string/it"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerEmailTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerLogo"
            android:layout_marginTop="@dimen/_100sdp"
            android:hint="@string/email"
            android:theme="@style/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12sdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerEmailTL"
            android:hint="@string/password"
            android:theme="@style/textInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/_12sdp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/registerPasswordTL"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_22sdp"
            android:background="@drawable/round_btn_pressed"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color"
            android:textSize="@dimen/_13sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/registerBtn"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_80sdp"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/backToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/get_back_to_login"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp"/>
        </RelativeLayout>
    </RelativeLayout>
    
</ScrollView>